--- a/supp.tex
+++ b/supp.tex
@@ -90,7 +90,7 @@ alignDRAW & -1792.15 & -1797.24 & -1791.53 & -2042.31
 \subfloat[]{\includegraphics[width=0.23\textwidth]{figures/new/a-toilet-seat-sits-open-in-the-grass-field-blurry.png}}\quad
 %
 \subfloat[]{\includegraphics[width=0.23\textwidth]{figures/new/a-person-skiing-on-sand-clad-vast-desert-blurry.png}}\\
-\vspace{-0.45cm}
+\vspace{-0.65cm}
 %
 \subfloat[%A stop sign is flying in blue skies.
 ]{\includegraphics[width=0.23\textwidth]{figures/new/a-stop-sign-is-flying-in-blue-skies-sharp.png}}\quad
@@ -112,7 +112,7 @@ alignDRAW & -1792.15 & -1797.24 & -1791.53 & -2042.31
 \subfloat[]{\includegraphics[width=0.23\textwidth]{figures/new/a-green-school-bus-parked-in-a-parking-lot-blurry.png}}\quad
 %
 \subfloat[]{\includegraphics[width=0.23\textwidth]{figures/new/a-blue-school-bus-parked-in-a-parking-lot-blurry.png}}\\
-\vspace{-0.45cm}
+\vspace{-0.65cm}
 %
 \subfloat[%A yellow school bus parked in a parking lot.
 ]{\includegraphics[width=0.23\textwidth]{figures/new/a-yellow-school-bus-parked-in-a-parking-lot-sharp.png}}\quad
@@ -134,7 +134,7 @@ alignDRAW & -1792.15 & -1797.24 & -1791.53 & -2042.31
 \subfloat[]{\includegraphics[width=0.23\textwidth]{figures/new/a-vintage-photo-of-a-cat-blurry.png}}\quad
 %
 \subfloat[]{\includegraphics[width=0.23\textwidth]{figures/new/a-vintage-photo-of-a-dog-blurry.png}}\\
-\vspace{-0.45cm}
+\vspace{-0.65cm}
 %
 \subfloat[%The decadent chocolate desert is on the table.
 ]{\includegraphics[width=0.23\textwidth]{figures/new/the-decadent-chocolate-dessert-is-on-the-table-sharp.png}}\quad
@@ -156,7 +156,7 @@ alignDRAW & -1792.15 & -1797.24 & -1791.53 & -2042.31
 \subfloat[]{\includegraphics[width=0.23\textwidth]{figures/new/a-herd-of-elephants-walking-across-a-dry-grass-field-blurry.png}}\quad
 %
 \subfloat[]{\includegraphics[width=0.23\textwidth]{figures/new/a-herd-of-elephants-walking-across-a-green-grass-field-blurry.png}}\\
-\vspace{-0.45cm}
+\vspace{-0.65cm}
 %
 \subfloat[%A very large commercial plane flying in blue skies.
 ]{\includegraphics[width=0.23\textwidth]{figures/new/a-very-large-commercial-plane-flying-in-blue-skies-sharp.png}}\quad
@@ -178,7 +178,7 @@ alignDRAW & -1792.15 & -1797.24 & -1791.53 & -2042.31
 \subfloat[]{\includegraphics[width=0.23\textwidth]{figures/new/a-surfer-,-a-woman-,-and-a-child-walk-on-the-beach-blurry.png}}\quad
 %
 \subfloat[]{\includegraphics[width=0.23\textwidth]{figures/new/a-surfer-,-a-woman-,-and-a-child-walk-on-the-sun-blurry.png}}\\
-\vspace{-0.45cm}
+\vspace{-0.65cm}
 %
 \subfloat[%A rider on a blue motorcycle in the desert.
 ]{\includegraphics[width=0.23\textwidth]{figures/new/a-rider-on-a-blue-motorcycle-in-the-desert-sharp.png}}\quad
@@ -193,6 +193,6 @@ alignDRAW & -1792.15 & -1797.24 & -1791.53 & -2042.31
 ]{\includegraphics[width=0.23\textwidth]{figures/new/a-surfer-,-a-woman-,-and-a-child-walk-on-the-sun-sharp.png}}\\
 \end{center}
 %
-%\caption{\small Effect of sharpening generated images shown in the publication \textbf{Bottom}: Sharpened Images. \textbf{Top}: Original Images}
+\caption{\small Effect of sharpening images previously shown in the publication. \textbf{Bottom}: Sharp. \textbf{Top}: Original.}
 %\vspace{-0.1in}
 \end{figure}
