--- a/supp.tex
+++ b/supp.tex
@@ -50,8 +50,7 @@ MNIST Captions & 32 & 300 & 300 & 150 & 8 & 8\\
 %\vspace{-0.3cm}
 \end{table}
 
-The GAN model used for sharpening had the same configuration as the $28 \times 28$ model trained by \cite{denton_lapgan} on the edge residuals of the CIFAR dataset. The configuration can be found at \url{https://gist.github.com/soumith/e3f722173ea16c1ea0d9}. The model was trained for $6$ epochs. 
-For the LAPGAN model, we used a data augmentation step where we took 5 crops (top-left, top-right, bottom-left, bottom-right, center) of a downsampled COCO image and assigned each crop one of the 5 captions that described the uncropped image.
+The GAN model used for sharpening had the same configuration as the $28 \times 28$ model trained by \cite{denton_lapgan} on the edge residuals of the CIFAR dataset. The configuration can be found at \url{https://gist.github.com/soumith/e3f722173ea16c1ea0d9}. The model was trained for $6$ epochs.
 
 \subsection*{Evaluation}
 
@@ -81,7 +80,7 @@ alignDRAW & -1792.15 & -1797.24 & -1791.53 & -2042.31
 
 \begin{figure}[!h]
 \captionsetup[subfigure]{labelformat=empty}
-\vspace{-0.27in}
+\vspace{-0.15in}
 \begin{center}
 \subfloat[]{\includegraphics[width=0.23\textwidth]{figures/new/a-stop-sign-is-flying-in-blue-skies-blurry.png}}\quad
 %
@@ -90,7 +89,7 @@ alignDRAW & -1792.15 & -1797.24 & -1791.53 & -2042.31
 \subfloat[]{\includegraphics[width=0.23\textwidth]{figures/new/a-toilet-seat-sits-open-in-the-grass-field-blurry.png}}\quad
 %
 \subfloat[]{\includegraphics[width=0.23\textwidth]{figures/new/a-person-skiing-on-sand-clad-vast-desert-blurry.png}}\\
-\vspace{-0.65cm}
+\vspace{-0.45cm}
 %
 \subfloat[%A stop sign is flying in blue skies.
 ]{\includegraphics[width=0.23\textwidth]{figures/new/a-stop-sign-is-flying-in-blue-skies-sharp.png}}\quad
@@ -103,8 +102,8 @@ alignDRAW & -1792.15 & -1797.24 & -1791.53 & -2042.31
 %
 \subfloat[%A person skiing on sand clad vast desert.
 ]{\includegraphics[width=0.23\textwidth]{figures/new/a-person-skiing-on-sand-clad-vast-desert-sharp.png}}\\
+\vspace{-0.25cm}
 %
-
 \subfloat[]{\includegraphics[width=0.23\textwidth]{figures/new/a-yellow-school-bus-parked-in-a-parking-lot-blurry.png}}\quad
 %
 \subfloat[]{\includegraphics[width=0.23\textwidth]{figures/new/a-red-school-bus-parked-in-a-parking-lot-blurry.png}}\quad
@@ -112,7 +111,7 @@ alignDRAW & -1792.15 & -1797.24 & -1791.53 & -2042.31
 \subfloat[]{\includegraphics[width=0.23\textwidth]{figures/new/a-green-school-bus-parked-in-a-parking-lot-blurry.png}}\quad
 %
 \subfloat[]{\includegraphics[width=0.23\textwidth]{figures/new/a-blue-school-bus-parked-in-a-parking-lot-blurry.png}}\\
-\vspace{-0.65cm}
+\vspace{-0.45cm}
 %
 \subfloat[%A yellow school bus parked in a parking lot.
 ]{\includegraphics[width=0.23\textwidth]{figures/new/a-yellow-school-bus-parked-in-a-parking-lot-sharp.png}}\quad
@@ -125,8 +124,8 @@ alignDRAW & -1792.15 & -1797.24 & -1791.53 & -2042.31
 %
 \subfloat[%A blue school bus parked in a parking lot.
 ]{\includegraphics[width=0.23\textwidth]{figures/new/a-blue-school-bus-parked-in-a-parking-lot-sharp.png}}\\
+\vspace{-0.25cm}
 %
-
 \subfloat[]{\includegraphics[width=0.23\textwidth]{figures/new/the-decadent-chocolate-dessert-is-on-the-table-blurry.png}}\quad
 %
 \subfloat[]{\includegraphics[width=0.23\textwidth]{figures/new/a-bowl-of-bananas-is-on-the-table-blurry.png}}\quad
@@ -134,7 +133,7 @@ alignDRAW & -1792.15 & -1797.24 & -1791.53 & -2042.31
 \subfloat[]{\includegraphics[width=0.23\textwidth]{figures/new/a-vintage-photo-of-a-cat-blurry.png}}\quad
 %
 \subfloat[]{\includegraphics[width=0.23\textwidth]{figures/new/a-vintage-photo-of-a-dog-blurry.png}}\\
-\vspace{-0.65cm}
+\vspace{-0.45cm}
 %
 \subfloat[%The decadent chocolate desert is on the table.
 ]{\includegraphics[width=0.23\textwidth]{figures/new/the-decadent-chocolate-dessert-is-on-the-table-sharp.png}}\quad
@@ -147,8 +146,8 @@ alignDRAW & -1792.15 & -1797.24 & -1791.53 & -2042.31
 %
 \subfloat[%A vintage photo of a dog.
 ]{\includegraphics[width=0.23\textwidth]{figures/new/a-vintage-photo-of-a-dog-sharp.png}}\\
+\vspace{-0.25cm}
 %
-
 \subfloat[]{\includegraphics[width=0.23\textwidth]{figures/new/a-very-large-commercial-plane-flying-in-blue-skies-blurry.png}}\quad
 %
 \subfloat[]{\includegraphics[width=0.23\textwidth]{figures/new/a-very-large-commercial-plane-flying-in-rainy-skies-blurry.png}}\quad
@@ -156,7 +155,7 @@ alignDRAW & -1792.15 & -1797.24 & -1791.53 & -2042.31
 \subfloat[]{\includegraphics[width=0.23\textwidth]{figures/new/a-herd-of-elephants-walking-across-a-dry-grass-field-blurry.png}}\quad
 %
 \subfloat[]{\includegraphics[width=0.23\textwidth]{figures/new/a-herd-of-elephants-walking-across-a-green-grass-field-blurry.png}}\\
-\vspace{-0.65cm}
+\vspace{-0.45cm}
 %
 \subfloat[%A very large commercial plane flying in blue skies.
 ]{\includegraphics[width=0.23\textwidth]{figures/new/a-very-large-commercial-plane-flying-in-blue-skies-sharp.png}}\quad
@@ -169,8 +168,8 @@ alignDRAW & -1792.15 & -1797.24 & -1791.53 & -2042.31
 %
 \subfloat[%A herd of elephants walking across a green grass field.
 ]{\includegraphics[width=0.23\textwidth]{figures/new/a-herd-of-elephants-walking-across-a-green-grass-field-sharp.png}}\\
+\vspace{-0.25cm}
 %
-
 \subfloat[]{\includegraphics[width=0.23\textwidth]{figures/new/a-rider-on-a-blue-motorcycle-in-the-desert-blurry.png}}\quad
 %
 \subfloat[]{\includegraphics[width=0.23\textwidth]{figures/new/a-rider-on-a-blue-motorcycle-in-the-forest-blurry.png}}\quad
@@ -178,7 +177,7 @@ alignDRAW & -1792.15 & -1797.24 & -1791.53 & -2042.31
 \subfloat[]{\includegraphics[width=0.23\textwidth]{figures/new/a-surfer-,-a-woman-,-and-a-child-walk-on-the-beach-blurry.png}}\quad
 %
 \subfloat[]{\includegraphics[width=0.23\textwidth]{figures/new/a-surfer-,-a-woman-,-and-a-child-walk-on-the-sun-blurry.png}}\\
-\vspace{-0.65cm}
+\vspace{-0.45cm}
 %
 \subfloat[%A rider on a blue motorcycle in the desert.
 ]{\includegraphics[width=0.23\textwidth]{figures/new/a-rider-on-a-blue-motorcycle-in-the-desert-sharp.png}}\quad
@@ -193,6 +192,6 @@ alignDRAW & -1792.15 & -1797.24 & -1791.53 & -2042.31
 ]{\includegraphics[width=0.23\textwidth]{figures/new/a-surfer-,-a-woman-,-and-a-child-walk-on-the-sun-sharp.png}}\\
 \end{center}
 %
-\caption{\small Effect of sharpening images previously shown in the publication. \textbf{Bottom}: Sharp. \textbf{Top}: Original.}
+\caption{\small Effect of sharpening images previously shown in the publication.}
 %\vspace{-0.1in}
 \end{figure}
