--- a/iclr-paper-new.tex
+++ b/iclr-paper-new.tex
@@ -83,7 +83,7 @@
 \setlength{\abovecaptionskip}{5pt} % Chosen fairly arbitrarily
 \setlength{\belowcaptionskip}{5pt} % Chosen fairly arbitrarily
 
-\title{Generating Images From Captions\\ With Attention}
+\title{Generating Images from Captions\\ with Attention}
 
 \author{
 Elman Mansimov, Emilio Parisotto, Jimmy Lei Ba \& Ruslan Salakhutdinov\\
@@ -517,7 +517,7 @@ In \Figref{fig:diffmodels}, bottom row, we generated several samples from the pr
 
 As for the quantitative comparison of different models, we first compare the performances of the model trained with variational methods. We rank the images in the test set conditioned on the captions based on the variational lower bound of the log-probabilities 
 and then report the Precision-Recall metric as an evaluation of the quality of the generative model (see Table~\ref{tab:results}.). Perhaps unsurprisingly, generative models did not perform well on the image retrieval task. To deal with the large computational complexity involved in looping through each test image, we create a shortlist of one hundred images including the correct one, based on the images having the closest 
-Euclidean distance in the top convolutional feature-space of a VGG-like model~\citep{simonyan_convnet} trained on the CIFAR dataset\footnote{The architecture of the model is described here \url{http://torch.ch/blog/2015/07/30/cifar.html}. The shortlist of test images used for evaluation can be downloaded from \url{http://www.cs.toronto.edu/~emansim/cap2im/test-nns.pkl}.} \citep{krizhevsky_cifar}. 
+Euclidean distance in the last fully-connected feature space of a VGG-like model~\citep{simonyan_convnet} trained on the CIFAR dataset\footnote{The architecture of the model is described here \url{http://torch.ch/blog/2015/07/30/cifar.html}. The shortlist of test images used for evaluation can be downloaded from \url{http://www.cs.toronto.edu/~emansim/cap2im/test-nns.pkl}.} \citep{krizhevsky_cifar}. 
 Since there are ``easy'' images for which the model assigns high log-probabilities independent of the query caption, 
 we instead look at the ratio of 
 the likelihood of the image conditioned on the sentence to the likelihood of the image conditioned on the mean sentence representation in the training set, following the retrieval protocol of~\citep{kiros_captions}.
