changed task of in itself to task in itself

--- a/iclr-paper-new.tex
+++ b/iclr-paper-new.tex
@@ -509,7 +509,7 @@ We also tried to analyze the way the model generated images. Unfortunately, we f
 
 \subsubsection{Comparison With Other Models}
 \vspace{-0.05in}
-Quantitatively evaluating generative models remains a challenging task in of itself as each method of evaluation suffers from its own specific drawbacks. Compared to reporting classification accuracies in discriminative models, the measures defining generative models are intractable most of the times and might not correctly define the real quality of the model. To get a better comparison between performances of different generative models, we report results on two different metrics as well as a qualitative comparison of different generative models.
+Quantitatively evaluating generative models remains a challenging task in itself as each method of evaluation suffers from its own specific drawbacks. Compared to reporting classification accuracies in discriminative models, the measures defining generative models are intractable most of the times and might not correctly define the real quality of the model. To get a better comparison between performances of different generative models, we report results on two different metrics as well as a qualitative comparison of different generative models.
 
 We compared the performance of the proposed model to the DRAW model conditioned on captions without the $align$ function (noalignDRAW) as well as the DRAW model conditioned on the skipthought vectors of \citep{kiros_skipthought} (skipthoughtDRAW). All of the conditional DRAW models were trained with a binary cross-entropy cost function, i.e. they had Bernoulli conditional likelihoods. We also compared our model with Fully-Connected (Fully-Conn) and Convolutional-Deconvolutional (Conv-Deconv) Variational Autoencoders which were trained with the least squares cost function. The LAPGAN model of~\citep{denton_lapgan} was trained on a two level Laplacian Pyramid with a GAN as a top layer generator and all stages were conditioned on the same skipthought vector.
 
