--- a/iclr-paper.bib
+++ b/iclr-paper.bib
@@ -149,6 +149,15 @@
   year      = {2015}
 }
 
+
+@inproceedings{kiros_icml14,
+  author    = {R. Kiros and  R. Salakhutdinov and R. Zemel},
+  title     = {Multimodal Neural Language Models},
+  booktitle = {ICML},
+  year      = {2014}
+}
+
+
 @article{kiros_captions,
   author    = {Ryan Kiros and
                Ruslan Salakhutdinov and
@@ -159,6 +168,7 @@
   volume    = {abs/1411.2539},
   year      = {2014}
 }
+
 
 @inproceedings{russ_binarizedmnist,
   author    = {Ruslan Salakhutdinov and
