--- a/iclr-paper-new.tex
+++ b/iclr-paper-new.tex
@@ -331,7 +331,8 @@ In all of our experiments, we used only a single sample
 from $\post(\Lat_{1:T}\given\icaption, \oimage)$ for parameter learning.
 Training details, hyperparameter settings,
 and the overall model architecture are specified in Appendix B. 
-We will also release our code with pretrained models.
+The code is available at \url{https://github.com/emansim/text2image}.
+%We will also release our code with pretrained models.
 
 \comm{
 \begin{align}
@@ -513,13 +514,13 @@ Instead of calculating error per pixel, we turn to a smarter metric, the Structu
 \textbf{Model} & \textbf{R@1} & \textbf{R@5} & \textbf{R@10} & \textbf{R@50} & \textbf{Med r} & \textbf{SSI}\\ %& \textbf{Feature Distance} \\
 \hline
 \hline
-LAPGAN & - & - & - & - & - & 0.08 \\ % & 6.89 \\ % - & - & - & - & - & 0.08
+LAPGAN & - & - & - & - & - & 0.08 $\pm$ 0.07 \\ % & 6.89 \\ % - & - & - & - & - & 0.08
 \hline
-Fully-Conn VAE & 1.0 & 6.6 & 12.0 & 53.4 & 47 & 0.156 \\ %& 6.11 \\ % 0.688 & 4.58 & 8.74 & 46.832 & 54 & -1
-Conv-Deconv VAE & 1.0 & 6.5 & 12.0 & 52.9 & 48 & 0.164 \\ %& 6.32 \\ % 0.672 & 4.448 & 8.476 & 46.596 & 54 & 0.131
-skipthoughtDRAW & 2.0 & 11.2 & 18.9 & 63.3 & 36 & 0.157 \\ %& 6.93 \\ % 0.988 & 6.18 & 11.48 & 52.512 & 48 & 0.118
-noalignDRAW & 2.8 & 14.1 & 23.1 & 68.0 & 31 & 0.155 \\ %& 7.01 \\ % 1.0 & 6.124 & 11.18 & 52.112 & 48 & 0.114
-alignDRAW & 3.0 & 14.0 & 22.9 & 68.5 & 31 & 0.156 \\ %& 6.99 \\ % 0.924 & 6.216 & 11.184 & 52.492 & 48 & 0.115
+Fully-Conn VAE & 1.0 & 6.6 & 12.0 & 53.4 & 47 & 0.156 $\pm$ 0.10  \\ %& 6.11 \\ % 0.688 & 4.58 & 8.74 & 46.832 & 54 & -1
+Conv-Deconv VAE & 1.0 & 6.5 & 12.0 & 52.9 & 48 & 0.164 $\pm$ 0.10 \\ %& 6.32 \\ % 0.672 & 4.448 & 8.476 & 46.596 & 54 & 0.131
+skipthoughtDRAW & 2.0 & 11.2 & 18.9 & 63.3 & 36 & 0.157 $\pm$ 0.11 \\ %& 6.93 \\ % 0.988 & 6.18 & 11.48 & 52.512 & 48 & 0.118
+noalignDRAW & 2.8 & 14.1 & 23.1 & 68.0 & 31 & 0.155 $\pm$ 0.11 \\ %& 7.01 \\ % 1.0 & 6.124 & 11.18 & 52.112 & 48 & 0.114
+alignDRAW & 3.0 & 14.0 & 22.9 & 68.5 & 31 & 0.156 $\pm$ 0.11 \\ %& 6.99 \\ % 0.924 & 6.216 & 11.184 & 52.492 & 48 & 0.115
 \end{tabulary}
 \end{center}
 \caption{Retrieval results of different models. 
